Fix: font size of hero and section on mobile

--- a/apps/neurotales/app/(marketing)/marketing-page.module.css
+++ b/apps/neurotales/app/(marketing)/marketing-page.module.css
@@ -38,7 +38,7 @@
 }
 
 .supportingText {
-  font-size: var(--_font-size-3);
+  font-size: var(--fs-lg);
   font-weight: var(--_font-weight-1000);
   color: var(--_palette-gray-100);
   margin-bottom: var(--_size-8);
@@ -49,7 +49,7 @@
 }
 
 .greenHeadline {
-  font-size: var(--_font-size-3);
+  font-size: var(--fs-lg);
   font-weight: var(--_font-weight-1000);
   color: var(--palette-primary-100);
   font-family: var(--_font-family-mac-default), var(--_font-family-windows),
@@ -132,6 +132,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  max-width: 512px;
 }
 
 @media (max-width: 768px) {
@@ -155,7 +156,7 @@
   gap: var(--space-lg);
   list-style: none;
   padding: 0;
-  margin: var(--layout-5xs) var(--space-4xl);
+  margin: var(--space-4xl) var(--space-4xl);
 }
 
 @media (max-width: 768px) {
@@ -225,6 +226,7 @@
 
 @media (max-width: 768px) {
   .steps {
+    margin-top: var(--space-4xl);
     flex-direction: column;
   }
 }
